--- a/index.html
+++ b/index.html
@@ -1,41 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <title>Homepage</title>
-</head>
-<body>
-    <nav class="navbar navbar-dark bg-dark">
-        <!-- Navbar content -->
-        <ul class="nav nav-pills">
-            <li class="nav-item">
-                <a class="nav-link active" href="./index.html">
-                    Home
-                  </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./definitions.html">
-                    Definitions
-                  </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./questions.html">
-                    Questions
-                  </a>
-            </li>  
-        </ul>
-      </nav>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Home</title>
+		<!-- Add Bootstrap CSS -->
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+		/>
+	</head>
+	<body class="">
+		<div class="container-fluid vh-100">
+			<div class="row h-100">
+				<!-- Navigation Bar (Left Side) -->
+				<div class="bg-dark text-white">
+					<button
+						class="btn btn-link w-100 h-100 m-0"
+						type="button"
+						data-toggle="collapse"
+						data-target="#collapseOne"
+					>
+						<nav class="navbar navbar-dark bg-dark">
+							<!-- Navbar content -->
+							<ul class="nav nav-pills flex-column">
+								<li class="nav-item">
+									<a id="home" class="nav-link active" href="./index.html"
+										>Home</a
+									>
+								</li>
+								<div id="collapseOne" class="collapse">
+									<li class="nav-item">
+										<a id="questions1" class="nav-link" href="./questions1.html"
+											>Questions Group One</a
+										>
+									</li>
+									<li class="nav-item">
+										<a id="questions2" class="nav-link" href="./questions2.html"
+											>Questions Group Two</a
+										>
+									</li>
+									<li class="nav-item">
+										<a
+											id="definitions1"
+											class="nav-link"
+											href="./definitions1.html"
+											>Definitions Group One</a
+										>
+									</li>
+									<li class="nav-item">
+										<a
+											id="definitions2"
+											class="nav-link"
+											href="./definitions2.html"
+											>Definitions Group Two</a
+										>
+									</li>
+									<li class="nav-item">
+										<a id="contact" class="nav-link" href="./contactus.html"
+											>Contact Us</a
+										>
+									</li>
+								</div>
+							</ul>
+						</nav>
+					</button>
+				</div>
+				<!-- Content Area (Right Side) -->
+				<div class="col-lg-9 col-md-8 col-sm-12 bg-light">
+					<!-- Add your page content here -->
+					<h1>Welcome to HTML/CSS/JS and Bootstrap 5</h1>
+					<div class="bg-light p-5 m-5">
+						<p>
+							Hello,<br />
+							Your Name, Riza Arianne <br />
+							Your ID, P252069 <br />
+							Assessment Details,
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 
-      <h1>Welcome to HTML/CSS/JS and Bootstrap 5</h1>
-
-      <div class="bg-light p-5 m-5">
-          <p>Introduction here,<br> Your Name, <br> Your ID, <br> Assessment Details,</p>
-      </div>
-</body>
+		<!-- Add Bootstrap JS and jQuery -->
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+	</body>
 </html>
